--- a/src/main/resources/templates/page/ideaDetail.html
+++ b/src/main/resources/templates/page/ideaDetail.html
@@ -62,16 +62,16 @@
             <!-- SSE Card -->
             <div class="card bordered-card" style="height: 550px;">
                 <div class="card-header text-center">
-                    <h3 class="card-title">실시간 입찰 현황</h3>
+                    <h3 class="card-title" id = "bid-streaming">실시간 입찰 현황</h3>
                 </div>
                 <div class="card-body d-flex flex-column" id="sse-data" style="height: calc(100% - 100px); overflow-y: auto;">
                     <!-- SSE data will be appended here -->
                 </div>
                 <div class="card-footer">
                     <div class="input-group">
-                        <input type="number" class="form-control" id="bid-price" placeholder="입찰가격을 입력하세요">
+                        <input type="number" class="form-control" id="bid-price" placeholder="Enter the bid price">
                         <div class="input-group-append">
-                            <button class="btn btn-primary" id="bid-button">입찰</button>
+                            <button class="btn btn-primary" id="bid-button">BID</button>
                         </div>
                     </div>
                 </div>
@@ -82,11 +82,14 @@
                     <!-- Content will go here -->
                 </div>
             </div>
-
-            <div class="text-right mt-2">
-                <button class="btn btn-secondary btn-sm" id="edit-button">수정</button>
-            </div>
         </div>
+        <div class="col-lg-12"> &nbsp;  </div>
+
+        <div class="col-lg-12" style="text-align: right">
+            <button onclick="window.location.href='/view/home'" class="btn btn-dark">DELETE</button>
+            <button onclick="updateIdea()" class="btn btn-dark">UPDATE</button>
+        </div>
+        <div class="col-lg-12"> &nbsp;  </div>
     </div>
 </div>
 
@@ -113,23 +116,43 @@
         img.src = url;
     }
 
+    function deleteBid() {
+        // let jwtToken = localStorage.getItem("authToken");
+        //
+        // $.ajax({
+        //     url: sendUrl,
+        //     method: "GET",
+
+    }
+
+    function updateIdea() {
+        const url = new URL(window.location.href);
+        const urlParams = url.searchParams;
+
+        let ideaId = urlParams.get('id');
+        window.location.href = "/view/pageUpdate?id=" + ideaId;
+    }
+
     $(document).ready(function() {
+
+        let jwtToken = localStorage.getItem("authToken");
+
         $.ajax({
             url: sendUrl,
             method: "GET",
             success: function(data) {
                 console.log("Received data:", data);
                 $("#title").text(data.title);
-                $("#writer").html("<strong>작성자:</strong> " + data.writer);
-                $("#status").html("<strong>경매 상태:</strong> " + data.status);
+                $("#writer").html("<strong>WRITER :</strong> " + data.writer);
+                $("#status").html("<strong>BID STATUS :</strong> " + data.status);
 
                 if (data.status === "END") {
-                    $("#BidWinPrice").html("<strong>낙찰가:</strong> " + data.BidWinPrice);
+                    $("#BidWinPrice").html("<strong>WINNING BID PRICE :</strong> " + data.BidWinPrice);
                     $("#BidWinPrice").show();
                     $("#minimumStartingPrice").hide();
                 } else {
                     $("#BidWinPrice").hide();
-                    $("#minimumStartingPrice").html("<strong>최소 입찰 금액:</strong> " + data.minimumStartingPrice);
+                    $("#minimumStartingPrice").html("<strong>MINIMUN BID PRICE :</strong> " + numberWithCommas(data.minimumStartingPrice));
                     $("#minimumStartingPrice").show();
                 }
 
@@ -142,6 +165,15 @@
                         $("#image").attr("src", "/image/logo.svg");
                     }
                 });
+
+                const bidPriceInput = document.getElementById("bid-price");
+                const bidButton = document.getElementById("bid-button");
+
+                if(data.status === "END" || data.status === "PREPARE") {
+                    bidButton.disabled = true;
+                    bidPriceInput.disabled = true;
+
+                }
                 //writerId를 response에서 받아와야 할 듯
                 // var loggedInUserId = localStorage.getItem('userId');
                 // if (data.writerId === loggedInUserId) {
@@ -161,7 +193,12 @@
             console.log("Bid price update event received:", e.data);
 
             var newElement = document.createElement('p');
-            newElement.textContent = e.data + '원에 입찰 되었습니다.';
+            newElement.textContent = "It was bid for " + numberWithCommas(e.data) + " won."
+
+            var element = document.getElementById("bid-streaming");
+
+            // 원하는 새 텍스트로 변경합니다.
+            element.innerHTML = "Current Bid Price : ₩ " + numberWithCommas(e.data);
 
             var sseDataDiv = document.getElementById('sse-data');
             sseDataDiv.appendChild(newElement);
@@ -173,40 +210,56 @@
 
             // 빈 값인지 검증
             if (!bidPrice) {
-                alert("입찰 가격을 입력해주세요.");
+                alert("Please Input Bid Price");
                 return;
             }
 
-            // BidRequest 객체 생성
+            // BidRequest 객체 생성찰
             var bidRequest = {
                 "bidPrice": parseInt(bidPrice)
             };
 
             // 서버에 POST 요청 보내기
             $.ajax({
-                url: "http://3.36.98.58:8080/api/ideas/" + ideaId + "/bid",
+                url: "/api/ideas/" + ideaId + "/bid",
                 method: "POST",
                 contentType: "application/json",
                 data: JSON.stringify(bidRequest),
-                // headers: {
-                //       // 헤더에 토큰 추가
-                // },
+                headers: {
+                    Authorization: `Bearer ${jwtToken}`
+                },
                 success: function(response) {
                     console.log("Bid successfully created:", response);
-                    alert("입찰이 성공적으로 완료되었습니다.");
+                    alert("Bid Success!");
                 },
                 error: function(jqXHR, textStatus, errorThrown) {
                     console.log("An error occurred while creating the bid:", jqXHR, textStatus, errorThrown);
 
                     // HTTP 상태 코드가 401인 경우 로그인 필요 알림 띄우기
                     if(jqXHR.status === 401) {
-                        alert("로그인이 필요합니다.");
+                        alert("Please Login!");
                     } else {
-                        alert("유효하지 않은 입찰금액입니다.");
+                        alert("UnValid Bid Price!");
                     }
                 }
             });
         });
+
+
+        function numberWithCommas(number) {
+            // 숫자를 문자열로 변환합니다.
+            var numberString = number.toString();
+
+            // 숫자 문자열을 배열로 나눕니다.
+            var parts = numberString.split(".");
+
+            // 정수 부분에 쉼표를 추가합니다.
+            parts[0] = parts[0].replace(/\B(?=(\d{3})+(?!\d))/g, ",");
+
+            // 다시 합쳐서 포맷팅된 숫자를 반환합니다.
+            return parts.join(".");
+        }
+
 
 
     });
