refactore : 아이디어 작성 및 수정 화면에 토큰 적용

--- a/src/main/resources/templates/page/ideaWrite.html
+++ b/src/main/resources/templates/page/ideaWrite.html
@@ -183,7 +183,7 @@
             formData.append("image", itemImageInput.files[0]);
         }
 
-        const jwtToken = "#";
+        const jwtToken = localStorage.getItem("authToken");
         console.log(jwtToken)
 
         $.ajax({
