--- a/src/main/resources/templates/page/ideaUpdate.html
+++ b/src/main/resources/templates/page/ideaUpdate.html
@@ -244,7 +244,7 @@
             formData.append("image", itemImageInput.files[0]);
         }
 
-        const jwtToken = "#";
+        const jwtToken = localStorage.getItem("authToken");
 
         $.ajax({
             type: "PUT",
