--- a/src/main/resources/templates/page/ideaDetail.html
+++ b/src/main/resources/templates/page/ideaDetail.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Idea Detail</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         /* Custom CSS */
         #content {
@@ -33,13 +32,13 @@
 <!--&lt;!&ndash; 네비게이션 바 &ndash;&gt;-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <img src="/image/logo.svg" style="height: 35px; width: 35px"></img>
-    <a class="navbar-brand" href="/" style="margin-left: 5px">Idea Rush</a>
+    <a class="navbar-brand" href="/view/pageMain" style="margin-left: 5px">Idea Rush</a>
 </nav>
 
 <div class="container mt-4">
     <div class="row">
         <!-- Left Side (Image) -->
-        <div class="col-md-6">
+        <div class="col-lg-6">
             <div class="card bordered-card" style="height: 550px;">
                 <div class="card-body d-flex align-items-center justify-content-center" style="height: 100%;">
                     <img id="image" class="img-fluid" style="object-fit: contain; width: 100%; height: 100%;">
@@ -58,7 +57,7 @@
         </div>
 
         <!-- Right Side (SSE and Content) -->
-        <div class="col-md-6">
+        <div class="col-lg-6">
             <!-- SSE Card -->
             <div class="card bordered-card" style="height: 550px;">
                 <div class="card-header text-center">
@@ -96,7 +95,8 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
 <script>
     const url = new URL(window.location.href);
@@ -165,7 +165,7 @@
                 },
                 success: function(data) {
                     alert("Idea successfully deleted!");
-                    window.location.href = '/view/home'; // 삭제 성공 후 홈으로 리다이렉트
+                    window.location.href = '/view/pageMain'; // 삭제 성공 후 홈으로 리다이렉트
                 },
                 error: function(err) {
                     console.log("An error occurred:", err);
@@ -193,6 +193,8 @@
                 // BidLastPrice를 웹 페이지에 삽입
                 if (data.BidLastPrice) {
                     $("#bid-streaming").text("CURRENT BID PRICE: ₩ " + numberWithCommas(data.BidLastPrice));
+                } else {
+                    $("#bid-streaming").text("CURRENT BID PRICE: ₩ " + numberWithCommas(data.minimumStartingPrice));
                 }
 
                 if (data.status === "END") {
