refactor : Logout 버튼 수정

--- a/src/main/resources/templates/page/ideaMain.html
+++ b/src/main/resources/templates/page/ideaMain.html
@@ -189,11 +189,12 @@
 
 
         .button3 {
-            float: left;
-            margin-left: 245px;
-            margin-top: 10px;
+            float: none;
+            margin-left: 55px;
+            margin-right: auto;
+            /*margin-top: 10px;*/
             display: flex;
-            width: 160px;
+            /*width: 100px;*/
             padding: 12px;
             flex-direction: column;
             justify-content: center;
