--- a/src/main/resources/templates/page/signup.html
+++ b/src/main/resources/templates/page/signup.html
@@ -136,7 +136,7 @@
             }
 
             // 백엔드와 통신
-            fetch('http://localhost:8080/api/auth/signup', {  // 실제 백엔드 엔드포인트로 변경해야 함.
+            fetch('/api/auth/signup', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
