--- a/src/main/resources/templates/page/ideaDetail.html
+++ b/src/main/resources/templates/page/ideaDetail.html
@@ -226,7 +226,7 @@
 
                 }
 
-                if(payload){
+                if(payload) {
                     var loggedInUserId = payload.userId;
                     console.log(loggedInUserId) // 현재 접속중인 사람 id
                     console.log(data.id) // 게시물의 주인 id
@@ -237,6 +237,9 @@
                         $("#edit-button").hide();  // '수정' 버튼 숨기기
                         $("#delete-button").hide();  // '삭제' 버튼 숨기기
                     }
+                }else{
+                    $("#edit-button").hide();  // '수정' 버튼 숨기기
+                    $("#delete-button").hide();  // '삭제' 버튼 숨기기
                 }
 
 
