--- a/src/main/resources/templates/page/ideaWrite.html
+++ b/src/main/resources/templates/page/ideaWrite.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!--    df-->
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -175,6 +176,7 @@
         };
 
         const ideaJson = JSON.stringify(idea);
+        formData.append("idea", ideaJson);
 
         formData.append("idea", new Blob([ideaJson], { type: "application/json" }));
 
